--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0"
   },
@@ -25,6 +26,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
